@@ -78,6 +78,38 @@ name|NRTCachingDirectory
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|SolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|NamedList
+import|;
+end_import
+
 begin_comment
 comment|/**  * Factory to instantiate {@link org.apache.lucene.store.NRTCachingDirectory}  */
 end_comment
@@ -90,6 +122,90 @@ name|NRTCachingDirectoryFactory
 extends|extends
 name|StandardDirectoryFactory
 block|{
+DECL|field|maxMergeSizeMB
+specifier|private
+name|double
+name|maxMergeSizeMB
+decl_stmt|;
+DECL|field|maxCachedMB
+specifier|private
+name|double
+name|maxCachedMB
+decl_stmt|;
+annotation|@
+name|Override
+DECL|method|init
+specifier|public
+name|void
+name|init
+parameter_list|(
+name|NamedList
+name|args
+parameter_list|)
+block|{
+name|SolrParams
+name|params
+init|=
+name|SolrParams
+operator|.
+name|toSolrParams
+argument_list|(
+name|args
+argument_list|)
+decl_stmt|;
+name|maxMergeSizeMB
+operator|=
+name|params
+operator|.
+name|getDouble
+argument_list|(
+literal|"maxMergeSizeMB"
+argument_list|,
+literal|4
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|maxMergeSizeMB
+operator|<=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"maxMergeSizeMB must be greater than 0"
+argument_list|)
+throw|;
+block|}
+name|maxCachedMB
+operator|=
+name|params
+operator|.
+name|getDouble
+argument_list|(
+literal|"maxCachedMB"
+argument_list|,
+literal|48
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|maxCachedMB
+operator|<=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"maxCachedMB must be greater than 0"
+argument_list|)
+throw|;
+block|}
+block|}
 annotation|@
 name|Override
 DECL|method|create
@@ -118,9 +234,9 @@ name|path
 argument_list|)
 argument_list|)
 argument_list|,
-literal|4
+name|maxMergeSizeMB
 argument_list|,
-literal|48
+name|maxCachedMB
 argument_list|)
 return|;
 block|}
